# gti

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
sql/: init.sql
src/: crypto.cpp  crypto.h  database.cpp  database.h  file_handler.cpp  file_handler.h  main.cpp  util.cpp  util.h
src/static/: app.js  index.html  style.css
